fix layout bug for Safari 6-8 (absolutely positioned children of flex containers dont render properly)

--- a/src/styles/spots.scss
+++ b/src/styles/spots.scss
@@ -16,11 +16,10 @@
 
     &__header {
         display: flex;
-        align-items: center;
-        flex: 1;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        flex: 0 0 33%;
 
         svg {
             display: block;
@@ -33,29 +32,27 @@
         align-items: center;
         justify-content: space-between;
         
-        flex: 1 1 auto;
+        flex: 0 0 33%;
         
         width: 100%;
         padding: 0 5vmin;
     }
 
     &__slides {
-        position: relative;
-        width: 100%;
-        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
 
-        flex: 1 1 auto;
+        flex: 1 1 100%;
 
         .spot {
-            position: absolute;
-            display: flex;
+            flex: 1 1 100%;
+            // display: flex;
             align-items: center;
+            flex-direction: column;
             justify-content: center;
-            top: 0;
-            left: 0;
-            height: 100%;
-            width: 100%;
-            background: #fff;
+            display: none;
 
             &__title {
                 // TODO: change to rem everywhere
@@ -68,7 +65,7 @@
             }
 
             &--fadeout {
-                z-index: 100;
+                display: flex;
 
                 .spot__title {
                     opacity: 0;
@@ -76,7 +73,7 @@
                 }
             }
             &--active {
-                z-index: 100;
+                display: flex;
 
                 .spot__title {
                     opacity: 1;
@@ -91,12 +88,12 @@
     }
 }
 
-#spots__nav--prev {
-    order: -1;
-}
+// #spots__nav--prev {
+//     order: -1;
+// }
 
 #spots__play {
     display: flex;
     align-items: center;
-    flex: 1;
+    flex: 0 0 33%;
 }
